[package]
name = "int_fact"
version = "0.1.0"
authors = ["Clinton Selke <clinuxrulz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "int_fact"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
nom = "6.0.1"
num-bigint = "0.3.1"
wasm-bindgen = "0.2"
